- Scripts de Start de nó único e replicaset. - Exemplo de conexão em Java com o MongoDB - Programa para gerar N assinaturas aleatórias

--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,18 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+		<!-- Driver - MongoDB -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.11.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+	</dependencies>
 </project>
